--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p>Änderung drei</p>
 <p>Änderung vier</p>    
 <p>Änderung fünf</p>    
-<p>Änderung sechs</p>       
+<p>Änderung sechs</p>  
+<p>Änderung sieben</p>       
 </body>
 </html>
